# enhanced-player

./: AudioDecoder.h  AudioDecoderFactory.cpp  AudioDecoderFactory.h  AudioEffect.h  AudioEffectFactory.h  CMakeLists.txt  MPG123Decoder.cpp  MPG123Decoder.h  README.md  SimpleBiquad.h  SndfileDecoder.cpp  SndfileDecoder.h  advanced_dynamics.cpp  advanced_dynamics.h  advanced_eq_harmonics.cpp  advanced_eq_harmonics.h  build.sh  custom_effects.cpp  custom_effects.h  main.cpp  params.json  spatial_processing.h  vocal_instrument_separator.h
